--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,7 @@ before_install:
   # Useful for debugging any issues with conda
   - conda info -a
 install:
+  - conda create -n qiime_env python=2.7 qiime matplotlib=1.4.3 mock nose -c bioconda
   - conda create -n test_env python=$PYVERSION --file ci/conda_requirements.txt
   - source activate test_env
   - pip install -r ci/pip_requirements.txt
