--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,7 @@ before_install:
   - hash -r
   - conda config --set always_yes yes --set changeps1 no
   - conda config --add channels conda-forge
+  - conda config --add channels biocore
   - conda config --add channels https://conda.anaconda.org/bioconda
   #- conda config --add channels https://conda.anaconda.org/zechxu
   # Update conda itself
