--- a/.travis.yml
+++ b/.travis.yml
@@ -29,7 +29,7 @@ install:
   - pip install -r ci/pip_requirements.txt
   - pip install . --no-deps
 script:
-  - WITH_COVERAGE=TRUE make all
+  - travis_wait 30 WITH_COVERAGE=TRUE make all
 after_success:
   - coveralls
 #notifications:
