--- a/.travis.yml
+++ b/.travis.yml
@@ -23,12 +23,13 @@ before_install:
   # Useful for debugging any issues with conda
   - conda info -a
 install:
-  # - conda create -n qiime_env python=2.7 qiime matplotlib=1.4.3 mock nose -c bioconda
+  - conda create -n qiime_env python=2.7 qiime matplotlib=1.4.3 mock nose -c bioconda
   - conda create -n test_env python=$PYVERSION --file ci/conda_requirements.txt
   - source activate test_env
   - pip install -r ci/pip_requirements.txt
   - pip install . --no-deps
 script:
+  - conda env list
   - WITH_COVERAGE=TRUE make all
 after_success:
   - coveralls
