using latest seaborn version

--- a/recipes/ggmap/meta.yaml
+++ b/recipes/ggmap/meta.yaml
@@ -24,7 +24,7 @@ requirements:
     - biom-format >=2.1.6
     - basemap
     - matplotlib
-    - seaborn ==0.7.1
+    - seaborn
     - numpy
     - xlrd
     - pillow
@@ -43,7 +43,7 @@ requirements:
     - biom-format >=2.1.6
     - basemap
     - matplotlib
-    - seaborn ==0.7.1
+    - seaborn
     - numpy
     - xlrd
     - pillow
