using make targets and conda env files

--- a/recipes/makefile
+++ b/recipes/makefile
@@ -4,18 +4,20 @@ ENV_PREFIX=ggmap_
 package-feast:
 	conda build feast/ -c conda-forge -c aghozlane
 
-upload-feast:
-	anaconda upload ${CONDA_PREFIX}/conda-bld/${PLATFORM}/feast-*.tar.bz2
-
-env-feast:
-	conda create --name ${ENV_PREFIX}_feast -c conda-forge -c aghozlane -c sjanssen2 feast -y
-
-
 package-picrust1:
 	conda build picrust1/ -c bioconda -c conda-forge
 
-upload-picrust1:
-	anaconda upload ${CONDA_PREFIX}/conda-bld/${PLATFORM}/picrust1-*.tar.bz2
 
-env-picrust1:
-	conda create --name ${ENV_PREFIX}_picrust1 -c bioconda -c conda-forge -c sjanssen2 picrust1 -y
+all-upload: upload-feast upload-picrust1
+upload-%: ${CONDA_PREFIX}/conda-bld/${PLATFORM}/%-*.tar.bz2
+	anaconda upload ${CONDA_PREFIX}/conda-bld/${PLATFORM}/%-*.tar.bz2
+
+
+all-env: env-feast env-picrust1
+env-%: %/env.yaml
+	@if [ -d "${CONDA_PREFIX}/envs/${ENV_PREFIX}${*}/" ]; then \
+		echo "conda environment '${ENV_PREFIX}${*}' already exists."; \
+	else \
+		echo "now building new environment '${ENV_PREFIX}${*}'"; \
+		conda env create --name ${ENV_PREFIX}${*} --file ${*}/env.yaml -y; \
+	fi
