--- a/recipes/makefile
+++ b/recipes/makefile
@@ -7,10 +7,13 @@ package-feast:
 package-picrust1:
 	conda build picrust1/ -c bioconda -c conda-forge
 
+package-bugbase:
+	conda build bugbase/ -c conda-forge
+
 
 all-upload: upload-feast upload-picrust1
 upload-%: ${CONDA_PREFIX}/conda-bld/${PLATFORM}/%-*.tar.bz2
-	anaconda upload ${CONDA_PREFIX}/conda-bld/${PLATFORM}/%-*.tar.bz2
+	anaconda upload ${CONDA_PREFIX}/conda-bld/${PLATFORM}/${*}*.tar.bz2
 
 
 all-env: env-feast env-picrust1
