--- a/recipes/makefile
+++ b/recipes/makefile
@@ -16,12 +16,15 @@ package-metalonda:
 package-dada2_pacbio:
 	conda build dada2_pacbio -c conda-forge -c bioconda
 
-all-upload: upload-feast upload-picrust1 upload-bugbase upload-metalonda upload-dada2_pacbio
+package-pldist:
+	conda build pldist -c conda-forge -c bioconda -c r
+
+all-upload: upload-feast upload-picrust1 upload-bugbase upload-metalonda upload-dada2_pacbio pldist
 upload-%: ${CONDA_PREFIX}/conda-bld/${PLATFORM}/%-*.tar.bz2
 	anaconda upload ${CONDA_PREFIX}/conda-bld/${PLATFORM}/${*}*.tar.bz2
 
 
-all-env: env-feast env-picrust1 env-picrust2 env-bugbase env-metalonda env-dada2_pacbio
+all-env: env-feast env-picrust1 env-picrust2 env-bugbase env-metalonda env-dada2_pacbio pldist
 env-%: %/env.yaml
 	@if [ -d "${CONDA_PREFIX}/envs/${ENV_PREFIX}${*}/" ]; then \
 		echo "conda environment '${ENV_PREFIX}${*}' already exists."; \
