--- a/recipes/pldist/meta.yaml
+++ b/recipes/pldist/meta.yaml
@@ -3,7 +3,7 @@ package:
   version: "0.0.1"
 
 build:
-  number: 1
+  number: 2
 
 requirements:
   build:
@@ -18,6 +18,16 @@ requirements:
     - r-phangorn
     - r-ape
     - r-phytools
+
+test:
+  files:
+    - test_counts.tsv
+    - test_meta.tsv
+    - test_cmds.r
+    - test_exp_UW.tsv
+  commands:
+    - R --vanilla < test_cmds.r
+    - diff test_exp_UW.tsv test_obs_UW.tsv
 
 about:
   home: https://github.com/aplantin/pldist/
