--- a/recipes/sourcetracker2/meta.yaml
+++ b/recipes/sourcetracker2/meta.yaml
@@ -6,36 +6,40 @@ package:
 #  git_url: https://github.com/biota/sourcetracker2.git
 
 build:
-  number: 2
+  number: 3
 
 requirements:
   build:
-    - python =3.6
-    - numpy
-    - scipy
+    - python
+    - pip
+    - nose
+    - pep8
+    - flake8
+    - IPython>4.0.0
+    - notebook
     - scikit-bio
     - biom-format
-    - h5py
-    - hdf5
-    - seaborn
-    - IPython >=4.0.0
-    - notebook
+    - numpy
+    - scipy
     - matplotlib
     - pandas
+    - seaborn
 
   run:
-    - python =3.6
-    - numpy
-    - scipy
+    - python
+    - pip
+    - nose
+    - pep8
+    - flake8
+    - IPython>4.0.0
+    - notebook
     - scikit-bio
     - biom-format
-    - h5py
-    - hdf5
-    - seaborn
-    - IPython >=4.0.0
-    - notebook
+    - numpy
+    - scipy
     - matplotlib
     - pandas
+    - seaborn
 
 test:
   files:
