--- a/recipes/makefile
+++ b/recipes/makefile
@@ -22,12 +22,15 @@ package-sourcetracker2:
 package-pldist:
 	conda build pldist -c conda-forge -c bioconda -c r
 
-all-upload: upload-feast upload-picrust1 upload-bugbase upload-metalonda upload-dada2_pacbio upload-pldist upload-sourcetracker2
+package-tempted:
+	conda build tempted/ -c conda-forge
+
+all-upload: upload-feast upload-picrust1 upload-bugbase upload-metalonda upload-dada2_pacbio upload-pldist upload-sourcetracker2 upload-tempted
 upload-%: ${CONDA_PREFIX}/conda-bld/${PLATFORM}/%-*.tar.bz2
 	anaconda upload ${CONDA_PREFIX}/conda-bld/${PLATFORM}/${*}*.tar.bz2
 
 
-all-env: env-feast env-picrust1 env-picrust2 env-bugbase env-metalonda env-dada2_pacbio env-pldist env-sourcetracker2 env-spike
+all-env: env-feast env-picrust1 env-picrust2 env-bugbase env-metalonda env-dada2_pacbio env-pldist env-sourcetracker2 env-spike env-tempted
 env-%: %/env.yaml
 	@if [ -d "${CONDA_PREFIX}/envs/${ENV_PREFIX}${*}/" ]; then \
 		echo "conda environment '${ENV_PREFIX}${*}' already exists."; \
