fix tempted env.yaml

--- a/recipes/tempted/env.yaml
+++ b/recipes/tempted/env.yaml
@@ -1,24 +1,7 @@
 name: tempted
 channels:
   - conda-forge
+  - bioconda
+  - sjanssen2
 dependencies:
-  - r-base >=4.2.0
-  - r-essentials
-  - r-ggplot2 >=3.4.0
-  - r-readr
-  - r-dplyr
-  - r-yaml
-  - r-tidyr
-  - r-reticulate
-  - r-vegan
-  - r-randomforest
-  - r-prroc
-  - r-ggpubr
-  - r-gridextra
-  - r-rcolorbrewer
-  - r-plotly
-  - r-np >=0.60-17
-  - r-ape
-  - r-igraph
-  - libxml2  # for r-igraph: libxml/globals.h: No such file or directory
-  - r-ade4
+  - tempted
