update SourceTracker2 recipe, i.e. channels + version pinning

--- a/recipes/sourcetracker2/env.yaml
+++ b/recipes/sourcetracker2/env.yaml
@@ -1,6 +1,8 @@
 name: sourcetracker2
 channels:
+  - conda-forge
+  - bioconda
   - biocore
   - sjanssen2
 dependencies:
-  - sourcetracker2
+  - sourcetracker2 >= 2.0.1=py39he53d0f1_3
