add tools for QC

--- a/recipes/spike/env.yaml
+++ b/recipes/spike/env.yaml
@@ -1,4 +1,4 @@
-name: picrust2
+name: spike
 channels:
   - conda-forge
   - bioconda
@@ -6,3 +6,5 @@ channels:
 dependencies:
   - cutadapt >=1.18
   - bcl2fastq
+  - fastqc
+  - multiqc
